syntax = "proto3";

package envoy.extensions.filters.network.sip_proxy.filters.affinity.v3;

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.network.sip_proxy.filters.affinity.v3";
option java_outer_classname = "AffinityProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Affinity]
// [#extension: envoy.filters.sip_proxy.affinity]

message AffinityConfiguration {
  string name = 1;

  repeated Affinity affinities = 2;
}

message Affinity {
  AffinityMatch match = 1 [(validate.rules).message = {required: true}];

  AffinitySetting affinity = 2 [(validate.rules).message = {required: true}];
}

message AffinityMatch {
  oneof match_specifier {
    option (validate.required) = true;

    string domain = 1;
  }
}

message AffinitySetting {
  bool session_affinity = 1;

  bool registration_affinity = 2;
}
